tests/core/ill-typed/extra-tests/incorrect_arity_of_main/my-test-2.stella
language core;

extend with #nullary-functions;

fn Bool::not(b : Bool) -> Bool {
  return
    if b then false else true 
}

fn main() -> Bool {
  return Bool::not(true)
}
